fix image size overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -31,6 +31,11 @@ body {
     float: left;
 }
 
+#image-space img {
+    max-width:100%;
+    max-height:100%;
+}
+
 #button-space {
     color: #bdbdbd;
     width: 50%;
